fixed not showing single product bug

--- a/app/src/components/styles/product.css
+++ b/app/src/components/styles/product.css
@@ -95,6 +95,9 @@
   justify-content: center;
   gap: 10px;
 }
+.addtocart button:hover {
+  cursor: pointer;
+}
 .addtocartImage {
   width: 25px;
   height: 25px;
